--- a/module-admin/src/main/resources/templates/member/view.html
+++ b/module-admin/src/main/resources/templates/member/view.html
@@ -21,9 +21,9 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6 mb-3">
                                     <div class="mb-0 form-group row">
-                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
+                                        <div class="form-label col-sm-12 col-form-label p-t-0 pb-1 "><strong>키워드</strong></div>
                                         <div class="input-group input-group-dropdown mb-0">
-                                            <select name="searchType" id="searchType" class="form-select form-control form-control-round">
+                                            <select name="searchType" id="searchType" class="form-select form-control form-control-round left-select custom-select">
                                                 <option value="">- 전체 -</option>
                                                 <option value="email">아이디</option>
                                                 <option value="nickname">닉네임</option>
